Fix/design bugs fix (#22)
* fix(client): change disappeared divider when sizing the screen bug

* refactor(client): change className to be optional so i have a default one

* fix(client): change toasts component scrollbar and welcome page grid

* refactor(client): change color to var color

--- a/apps/client/src/components/card/card.module.css
+++ b/apps/client/src/components/card/card.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   min-height: 4em;
+  max-height: 4em;
 }
 
 .heading {
